--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "src/server/index.js",
   "scripts": {
+    "build": "gulp webpackReact",
+    "start": "nodemon --exec babel-node src/server/index.js",
+    "start-release": "set NODE_ENV=production | babel-node src/server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
